# BMP-Rasterizer

./: CMakeLists.txt  Readme.md  todo.txt
builds/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BMP.sln  BMP.vcxproj  BMP.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
builds/BMP.dir/Debug/: BMP.exe.recipe  BMP.ilk
builds/BMP.dir/Debug/BMP.tlog/: BMP.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
builds/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
builds/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
builds/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
builds/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
dependencies/include/: InputHandler.h  MovementController.h  jbmp.h  jmat.h  jrast.h  jshapes.h
src/: main.cpp
